Fix spacing

--- a/webclient/src/light.css
+++ b/webclient/src/light.css
@@ -53,6 +53,10 @@ a {
 	min-height: 45rem;
 }
 
+.bottomMargin {
+	margin-bottom: 1rem;
+}
+
 .bean,
 .photo-404 {
 	max-width: 100%;
